# copilot-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
copilot_mcp/: __main__.py  server.py
