[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-mcp"
version = "0.1.0"
description = "MCP server that exposes GitHub Copilot AI (all models) as tools for Codex, Claude Code, Gemini CLI, and any MCP client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "github-copilot", "ai", "codex", "claude", "gemini", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
copilot-mcp = "copilot_mcp.server:run"

[project.urls]
Homepage = "https://github.com/elastics-ai/copilot-mcp"
Repository = "https://github.com/elastics-ai/copilot-mcp"
Issues = "https://github.com/elastics-ai/copilot-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["copilot_mcp"]
